@@ -7,6 +7,10 @@ Changelog
 
 - Actually fix unzipping.
 
+- Refactor attributes and overrides: attributes allow template expansion now
+  and also converting default values. The Attribute class has moved to the
+  batou component module.
+
 
 1.0b23 (2014-06-30)
 ===================
